<resources>

    <string name="app_name"> Cool Mix </string>
    <!-- Soft electronic song -->
    <string name="electronica"> Electronica </string>
    <!-- Cinematic song -->
    <string name="cinematic"> Cinematic</string>
    <!-- pop song -->
    <string name="popsong"> Pop Songs</string>
    <!-- Jazz -->
    <string name="jazz">Jazz Music</string>
    <!-- rock -->
    <string name="rock">Rock n Roll </string>
    <!-- pot pourit -->
    <string name="potPourit">Pot Pourit </string>

    <!--Image Description items -->
    <string name="cine">Cinematic</string>
    <string name="pop">Pop </string>
    <string name="popPouRitmix">Mix</string>
    <string name="jazz2">Jazz</string>
    <string name="home">Home</string>
    <string name="play_btn">Play Button</string>

</resources>
